Tests fixed